# Company-Website

./: docker-compose.yaml  script.py
backend/: Dockerfile  fallback.db  pyproject.toml
backend/app/: database.py  main.py  models.py  schemas.py
frontend/: package-lock.json
frontend/src/: styles.css
frontend/src/app/: app.component.ts  app.config.ts  app.routes.ts
frontend/src/app/about/: about.component.html  about.component.ts
frontend/src/app/courses/: courses.component.css  courses.component.html  courses.component.ts
frontend/src/app/home/: home.component.css  home.component.html  home.component.ts
frontend/src/app/navbar/: navbar.component.html  navbar.component.ts
frontend/src/app/udemy/: udemy.component.css  udemy.component.html  udemy.component.ts
frontend/src/app/youtube/: youtube.component.css  youtube.component.html  youtube.component.ts
nginx/: nginx.conf
