[tool.poetry]
name = "app"
version = "0.1.0"
description = "My portfolio backend using FastAPI"
authors = ["You <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "0.95.2"
uvicorn = "0.22.0"
SQLAlchemy = "1.4.46"
psycopg2-binary = "2.9.6"
python-multipart = "0.0.5"
pydantic = "1.10.7"
requests = "^2.32.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
